# rust_clean_arch_template

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml
core/: Cargo.toml
core/src/: api.rs  container.rs  create_app.rs  lib.rs  main.rs
core/src/api/: route.rs  verify.rs
core/src/api/route/: auth.rs
core/src/api/verify/: controller.rs  request.rs  response.rs
crates/auth/: Cargo.toml
crates/auth/src/: adapter.rs  application.rs  domain.rs  lib.rs
crates/auth/src/adapter/: controller.rs  dto.rs  error.rs  port.rs  repository.rs
crates/auth/src/application/: error.rs  port.rs  service.rs
crates/auth/src/domain/: authenticated_user.rs
crates/auth/src/framework/: external.rs  service.rs
crates/auth/tests/: verify_id_token_test.rs
crates/auth/tests/mock/: mock_auth_port.rs  mock_auth_service.rs  mod.rs
crates/environment/: Cargo.toml
crates/environment/src/: env_error.rs  env_key.rs  lib.rs
crates/post/: Cargo.toml
crates/post/tests/: get_post_test.rs
src/: auth.rs  container.rs  core.rs  create_app.rs  lib.rs  main.rs
src/auth/: adapter.rs  application.rs
src/auth/adapter/: dto.rs  repository.rs
src/auth/adapter/dto/: authenticated_user_dto.rs
src/auth/adapter/port/: service.rs
src/auth/adapter/repository/: auth_repository_impl.rs
src/auth/application/: error.rs  use_case.rs
src/auth/application/error/: auth_use_case_error.rs
src/auth/application/port/: repository.rs
src/auth/application/use_case/: verify_id_token_use_case.rs
src/auth/domain/: entity.rs
src/auth/framework/: service.rs
src/core/api/: verify.rs
(+40 files in other folders)
