[workspace]
members = [
  "core",
  "crates/auth",
  "crates/environment",
  "crates/post"
]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
actix-http = "3.10.0"
async-trait = "0.1.88"
chrono = "0.4.41"
diesel = { version = "2.2.0", features = ["postgres"] }
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }

core.path = "core"
auth.path = "crates/auth"
environment.path = "crates/environment"
post.path = "crates/post"
